--- a/core-bundle/.tx/config
+++ b/core-bundle/.tx/config
@@ -2,147 +2,147 @@
 host = https://www.transifex.com
 type = XLIFF
 
-[contao.v4_0-core-countries]
+[contao-core-bundle.v4_0-countries]
 source_file = src/Resources/contao/languages/en/countries.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/countries.xlf
 
-[contao.v4_0-core-default]
+[contao-core-bundle.v4_0-default]
 source_file = src/Resources/contao/languages/en/default.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/default.xlf
 
-[contao.v4_0-core-exception]
+[contao-core-bundle.v4_0-exception]
 source_file = src/Resources/contao/languages/en/exception.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/exception.xlf
 
-[contao.v4_0-core-explain]
+[contao-core-bundle.v4_0-explain]
 source_file = src/Resources/contao/languages/en/explain.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/explain.xlf
 
-[contao.v4_0-core-languages]
+[contao-core-bundle.v4_0-languages]
 source_file = src/Resources/contao/languages/en/languages.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/languages.xlf
 
-[contao.v4_0-core-modules]
+[contao-core-bundle.v4_0-modules]
 source_file = src/Resources/contao/languages/en/modules.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/modules.xlf
 
-[contao.v4_0-core-tl_article]
+[contao-core-bundle.v4_0-tl_article]
 source_file = src/Resources/contao/languages/en/tl_article.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_article.xlf
 
-[contao.v4_0-core-tl_content]
+[contao-core-bundle.v4_0-tl_content]
 source_file = src/Resources/contao/languages/en/tl_content.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_content.xlf
 
-[contao.v4_0-core-tl_files]
+[contao-core-bundle.v4_0-tl_files]
 source_file = src/Resources/contao/languages/en/tl_files.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_files.xlf
 
-[contao.v4_0-core-tl_form]
+[contao-core-bundle.v4_0-tl_form]
 source_file = src/Resources/contao/languages/en/tl_form.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_form.xlf
 
-[contao.v4_0-core-tl_form_field]
+[contao-core-bundle.v4_0-tl_form_field]
 source_file = src/Resources/contao/languages/en/tl_form_field.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_form_field.xlf
 
-[contao.v4_0-core-tl_image_size]
+[contao-core-bundle.v4_0-tl_image_size]
 source_file = src/Resources/contao/languages/en/tl_image_size.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_image_size.xlf
 
-[contao.v4_0-core-tl_image_size_item]
+[contao-core-bundle.v4_0-tl_image_size_item]
 source_file = src/Resources/contao/languages/en/tl_image_size_item.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_image_size_item.xlf
 
-[contao.v4_0-core-tl_install]
+[contao-core-bundle.v4_0-tl_install]
 source_file = src/Resources/contao/languages/en/tl_install.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_install.xlf
 
-[contao.v4_0-core-tl_layout]
+[contao-core-bundle.v4_0-tl_layout]
 source_file = src/Resources/contao/languages/en/tl_layout.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_layout.xlf
 
-[contao.v4_0-core-tl_log]
+[contao-core-bundle.v4_0-tl_log]
 source_file = src/Resources/contao/languages/en/tl_log.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_log.xlf
 
-[contao.v4_0-core-tl_maintenance]
+[contao-core-bundle.v4_0-tl_maintenance]
 source_file = src/Resources/contao/languages/en/tl_maintenance.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_maintenance.xlf
 
-[contao.v4_0-core-tl_member]
+[contao-core-bundle.v4_0-tl_member]
 source_file = src/Resources/contao/languages/en/tl_member.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_member.xlf
 
-[contao.v4_0-core-tl_member_group]
+[contao-core-bundle.v4_0-tl_member_group]
 source_file = src/Resources/contao/languages/en/tl_member_group.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_member_group.xlf
 
-[contao.v4_0-core-tl_module]
+[contao-core-bundle.v4_0-tl_module]
 source_file = src/Resources/contao/languages/en/tl_module.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_module.xlf
 
-[contao.v4_0-core-tl_page]
+[contao-core-bundle.v4_0-tl_page]
 source_file = src/Resources/contao/languages/en/tl_page.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_page.xlf
 
-[contao.v4_0-core-tl_settings]
+[contao-core-bundle.v4_0-tl_settings]
 source_file = src/Resources/contao/languages/en/tl_settings.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_settings.xlf
 
-[contao.v4_0-core-tl_style]
+[contao-core-bundle.v4_0-tl_style]
 source_file = src/Resources/contao/languages/en/tl_style.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_style.xlf
 
-[contao.v4_0-core-tl_style_sheet]
+[contao-core-bundle.v4_0-tl_style_sheet]
 source_file = src/Resources/contao/languages/en/tl_style_sheet.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_style_sheet.xlf
 
-[contao.v4_0-core-tl_templates]
+[contao-core-bundle.v4_0-tl_templates]
 source_file = src/Resources/contao/languages/en/tl_templates.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_templates.xlf
 
-[contao.v4_0-core-tl_theme]
+[contao-core-bundle.v4_0-tl_theme]
 source_file = src/Resources/contao/languages/en/tl_theme.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_theme.xlf
 
-[contao.v4_0-core-tl_undo]
+[contao-core-bundle.v4_0-tl_undo]
 source_file = src/Resources/contao/languages/en/tl_undo.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_undo.xlf
 
-[contao.v4_0-core-tl_user]
+[contao-core-bundle.v4_0-tl_user]
 source_file = src/Resources/contao/languages/en/tl_user.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_user.xlf
 
-[contao.v4_0-core-tl_user_group]
+[contao-core-bundle.v4_0-tl_user_group]
 source_file = src/Resources/contao/languages/en/tl_user_group.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_user_group.xlf
