--- a/core-bundle/.travis.yml
+++ b/core-bundle/.travis.yml
@@ -17,15 +17,15 @@ sudo: false
 matrix:
   include:
     - php: 5.4
-      env: dependencies=highest
+      env: deps=highest
     - php: 5.6
-      env: dependencies=lowest
+      env: deps=lowest
 
 before_install:
   - composer selfupdate
-  - if [ -z "$dependencies" ]; then composer install; fi;
-  - if [ "$dependencies" = "lowest" ]; then composer update --prefer-lowest -n; fi;
-  - if [ "$dependencies" = "highest" ]; then composer update -n; fi;
+  - if [ -z "$deps" ]; then composer install --prefer-source; fi;
+  - if [ "$deps" = "lowest" ]; then composer update --prefer-source --prefer-lowest --prefer-stable; fi;
+  - if [ "$deps" = "highest" ]; then composer update --prefer-source; fi;
 
 script:
   - ./vendor/bin/phpunit --testsuite latest --coverage-clover=coverage.clover
