--- a/core-bundle/.travis.yml
+++ b/core-bundle/.travis.yml
@@ -4,9 +4,7 @@ php:
   - "5.4"
   - "5.5"
   - "5.6"
-
-  # FIXME: Cannot use Contao\String as String because 'String' is a special class name
-  #- "nightly"
+  - "nightly"
 
   # FIXME: Class Mock_Kernel_1fff02ed contains abstract method (registerBundles) and must therefore be declared
   # abstract or implement the remaining methods
