--- a/installation-bundle/composer.json
+++ b/installation-bundle/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.4.0",
         "symfony/framework-bundle": "~2.7",
-        "contao/core-bundle": "~4.0"
+        "contao/core-bundle": "^4.0.2"
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "~1.8"
