--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.4.0",
         "symfony/framework-bundle": "~2.7",
-        "symfony/console": "^2.7.3",
+        "symfony/console": "~2.7,!=2.7.2",
         "symfony/filesystem": "~2.7",
         "symfony/finder": "~2.7",
         "symfony/swiftmailer-bundle": "~2.3",
@@ -52,7 +52,7 @@
         "contao-components/tinymce4": "~4.1"
     },
     "require-dev": {
-        "composer/composer": "~1.0",
+        "composer/composer": "~1.0@dev",
         "fabpot/php-cs-fixer": "~1.8",
         "phpunit/phpunit": "~4.5",
         "symfony/phpunit-bridge": "~2.7"
@@ -70,6 +70,5 @@
             "dev-develop": "4.1.x-dev"
         }
     },
-    "prefer-stable": true,
-    "minimum-stability": "dev"
+    "prefer-stable": true
 }
