--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.4.0",
         "symfony/framework-bundle": "~2.7",
-        "symfony/console": "~2.7,!=2.7.2",
+        "symfony/console": "^2.7.3",
         "symfony/filesystem": "~2.7",
         "symfony/finder": "~2.7",
         "symfony/swiftmailer-bundle": "~2.3",
