--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -20,6 +20,7 @@
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "twig/twig": "~1.18",
         "doctrine/doctrine-bundle": "~1.4",
+        "contao-components/all": "~4.0",
         "leafo/scssphp": "~0.1",
         "matthiasmullie/minify": "~1.3",
         "michelf/php-markdown": "~1.4",
@@ -27,35 +28,16 @@
         "phpspec/php-diff": "~1.0",
         "simplepie/simplepie": "~1.3",
         "tecnick.com/tcpdf": "~6.0",
-        "true/punycode": "~1.0",
-        "contao-components/ace": "^1.1.9",
-        "contao-components/chosen": "~1.0",
-        "contao-components/colorbox": "~1.5",
-        "contao-components/colorpicker": "~1.4",
-        "contao-components/compass": "~0.12",
-        "contao-components/contao": "^4.1.4",
-        "contao-components/datepicker": "~2.2",
-        "contao-components/dropzone": "~3.10",
-        "contao-components/highlight": "~8.2",
-        "contao-components/html5shiv": "~3.7",
-        "contao-components/jquery": "~1.11",
-        "contao-components/jquery-ui": "~1.11",
-        "contao-components/mediabox": "~1.4",
-        "contao-components/mediaelement": "~2.15",
-        "contao-components/mootools": "~1.5",
-        "contao-components/respimage": "~1.1",
-        "contao-components/simplemodal": "~1.2",
-        "contao-components/stylect": "~3.4",
-        "contao-components/swipe": "^2.0.3",
-        "contao-components/tablesort": "~3.4",
-        "contao-components/tablesorter": "~2.0",
-        "contao-components/tinymce4": "~4.1"
+        "true/punycode": "~1.0"
     },
     "require-dev": {
         "composer/composer": "~1.0@dev",
         "fabpot/php-cs-fixer": "~1.8",
         "phpunit/phpunit": "~4.5",
         "symfony/phpunit-bridge": "~2.7"
+    },
+    "config": {
+        "component-dir": "vendor/contao-components"
     },
     "conflict": {
         "contao/core": "*"
