--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -20,7 +20,6 @@
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "twig/twig": "~1.18",
         "doctrine/doctrine-bundle": "~1.4",
-        "contao-components/all": "~4.0",
         "leafo/scssphp": "~0.1",
         "matthiasmullie/minify": "~1.3",
         "michelf/php-markdown": "~1.4",
@@ -28,7 +27,8 @@
         "phpspec/php-diff": "~1.0",
         "simplepie/simplepie": "~1.3",
         "tecnick.com/tcpdf": "~6.0",
-        "true/punycode": "~1.0"
+        "true/punycode": "~1.0",
+        "contao-components/all": "^4.0.2"
     },
     "require-dev": {
         "composer/composer": "~1.0@dev",
@@ -52,6 +52,5 @@
             "dev-develop": "4.1.x-dev",
             "dev-hotfix/4.0.2": "4.0.x-dev"
         }
-    },
-    "prefer-stable": true
+    }
 }
