--- a/installation-bundle/composer.json
+++ b/installation-bundle/composer.json
@@ -11,8 +11,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "symfony/framework-bundle": "~2.7",
-        "contao/core-bundle": "^4.0.2"
+        "symfony/framework-bundle": "~2.7"
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "~1.8"
@@ -27,7 +26,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-develop": "4.1.x-dev"
+            "dev-develop": "1.0.x-dev"
         }
     }
 }
