--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -17,7 +17,7 @@
         "symfony/finder": "~2.7",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/yaml": "~2.7",
-        "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
+        "sensio/framework-extra-bundle": "^3.0.2",
         "twig/twig": "~1.18",
         "doctrine/doctrine-bundle": "~1.4",
         "leafo/scssphp": "~0.1",
@@ -28,7 +28,7 @@
         "simplepie/simplepie": "~1.3",
         "tecnick.com/tcpdf": "~6.0",
         "true/punycode": "~1.0",
-        "contao-components/all": "^4.0.2"
+        "contao-components/all": "~4.0"
     },
     "require-dev": {
         "composer/composer": "~1.0@dev",
