--- a/installation-bundle/composer.json
+++ b/installation-bundle/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "symfony/framework-bundle": "~2.7"
+        "symfony/framework-bundle": "~2.7",
+        "contao/core-bundle": "^4.0.3"
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "~1.8"
