--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -28,7 +28,8 @@
         "simplepie/simplepie": "~1.3",
         "tecnick.com/tcpdf": "~6.0",
         "true/punycode": "~1.0",
-        "contao-components/all": "~4.0"
+        "contao-components/all": "~4.0",
+        "patchwork/utf8": "~1.2"
     },
     "require-dev": {
         "composer/composer": "~1.0@dev",
