--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -131,7 +131,7 @@ services:
         class: Contao\CoreBundle\EventListener\UserSessionListener
         arguments:
             - "@session"
-            - "@doctrine.dbal.default_connection"
+            - "@database_connection"
         calls:
             - [setContainer, ["@service_container"]]
             - [setTokenStorage, ["@security.token_storage"]]
