--- a/core-bundle/appveyor.yml
+++ b/core-bundle/appveyor.yml
@@ -13,6 +13,7 @@ install:
   - echo extension_dir=ext >> php.ini
   - echo extension=php_bz2.dll >> php.ini
   - echo extension=php_curl.dll >> php.ini
+  - echo extension=php_fileinfo.dll >> php.ini
   - echo extension=php_exif.dll >> php.ini
   - echo extension=php_gd2.dll >> php.ini
   - echo extension=php_intl.dll >> php.ini
