--- a/core-bundle/.gitignore
+++ b/core-bundle/.gitignore
@@ -3,11 +3,11 @@
 
 # Tests
 /tests/Fixtures/app/cache/contao/
-/tests/Fixtures/assets/
+/tests/Fixtures/assets/*/
 /tests/Fixtures/system/cache/
 /tests/Fixtures/system/config/
 /tests/Fixtures/system/logs/
-/tests/Fixtures/system/themes/
+/tests/Fixtures/system/themes/*/
 /tests/Fixtures/system/tmp/
 /tests/Fixtures/web/
 
